--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="fac082">  <td>24/03/10 20:23:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CustomerdepositTestcase.setUp()[pri:0, instance:com.crm.qa.testcases.CustomerdepositTestcase@cc43f62]">&gt;&gt;setUp</td> 
+<tr bgcolor="9b60e0">  <td>24/03/12 17:30:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;OpenaccountTestcase.setUp()[pri:0, instance:com.crm.qa.testcases.OpenaccountTestcase@413d1baf]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="fac082">  <td>24/03/10 20:24:00</td>   <td>4941</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CustomerdepositTestcase.customerdeposit()[pri:1, instance:com.crm.qa.testcases.CustomerdepositTestcase@cc43f62]">customerdeposit</td> 
+<tr bgcolor="9b60e0">  <td>24/03/12 17:30:46</td>   <td>4028</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OpenaccountTestcase.openaccount()[pri:1, instance:com.crm.qa.testcases.OpenaccountTestcase@413d1baf]">openaccount</td> 
   <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="fac082">  <td>24/03/10 20:24:03</td>   <td>7850</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CustomerdepositTestcase.tearDown()[pri:0, instance:com.crm.qa.testcases.CustomerdepositTestcase@cc43f62]">&lt;&lt;tearDown</td> 
+<tr bgcolor="9b60e0">  <td>24/03/12 17:30:48</td>   <td>5607</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;OpenaccountTestcase.tearDown()[pri:0, instance:com.crm.qa.testcases.OpenaccountTestcase@413d1baf]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
 </table>
